Add button to call function changeDivNumber and make grid fit into container

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
+    <label>Enter Grid size:
+        <input type="text" name="input" class="input">
+    </label>
+    <button class="submit">Submit</button>
     <div class="container"></div>
     <script src="logic.js"></script>
 </body>
